Fix the wrapping

--- a/src/scss/blocks/palette.scss
+++ b/src/scss/blocks/palette.scss
@@ -49,6 +49,7 @@
   padding: .5rem;
   box-sizing: border-box;
   opacity: .75;
+  white-space: nowrap;
 }
 
 .palette__cell--base .palette__cell-content {
